# atlantsh

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
atlantsh-bin/: Cargo.toml
atlantsh-bin/src/: lib.rs  shared.rs
atlantsh-bin/src/shared/: server.rs
atlantsh-interface/: Cargo.toml
atlantsh-interface/src/: lib.rs  server.rs
