[package]
name = "atlantsh-bin"
authors = ["Joshua Radin <jradin16@gmail.com>"]
version = "0.1.0"
edition = "2021"
default-run = "atlsh"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "atlsh"

[[bin]]
name = "atlsh-shell"

[[bin]]
name = "atlsh-command"

[[bin]]
name = "atlsh-server"

[dependencies]
clap = { version = "3.0.5", features=["derive"] }
ctrlc = "3.2.1"
serde = { version = "1.0.133", features=["derive"] }
serde_json = "1.0.74"
lazy_static = "1.4.0"